--- a/src/main/resources/templates/post/show.html
+++ b/src/main/resources/templates/post/show.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="partials/head :: head('Spring Blog | Viewing one Post')">
     <meta charset="UTF-8">
     <title>Title</title>
+
 </head>
 <body>
-galaxy
+<nav th:replace="partials/navbar :: navbar"></nav>
+
+<div>
+
+    <div th:text="${postId}"</div>
+    <div th:text="${post.title}">Title</div>
+    <div th:text="${post.body}">Body</div>
+<a th:href="@{|/posts/delete/${postId}|}">Edit Post</a>
+
+</div>
 </body>
 </html>
