relationship exercise complete

--- a/src/main/resources/templates/post/show.html
+++ b/src/main/resources/templates/post/show.html
@@ -10,10 +10,16 @@
 
 <div>
 
-    <div th:text="${postId}"</div>
+    <div th:text="${postId}">Id</div>
     <div th:text="${post.title}">Title</div>
     <div th:text="${post.body}">Body</div>
 <a th:href="@{|/posts/delete/${postId}|}">Edit Post</a>
+    <div>Created by: <span th:text="${post.owner.username}"></span></div>
+    <a th:href="@{|/posts/edit/${postId}|}">Edit Post</a>
+    <form th:action="@{|/posts/delete/${postId}|}" th:method="post">
+        <button type="submit">Delete</button>
+    </form>
+
 
 </div>
 </body>
