--- a/src/main/resources/templates/post/index.html
+++ b/src/main/resources/templates/post/index.html
@@ -18,10 +18,10 @@
 </div>
 
 
-    <div th:text=" ${posts}">
+    <div th:each="post : ${posts}">
 <h3 th:text="${post.title}">Title</h3>
-<div th:text="${post.body}">Body</div>
-        <p th:text="${post.owner.username}" ></p>
+<p th:text="${post.body}">Body</p>
+<!--        <span th:text="${post.user.username}" ></span>-->
 
     </div>
 </body>
