--- a/src/main/resources/templates/post/create.html
+++ b/src/main/resources/templates/post/create.html
@@ -5,30 +5,37 @@
     <title>Title</title>
 </head>
 <body>
+<form action="/posts/create" method="post">
 
-<form action="action_page.php" method="post">
-    <div class="imgcontainer">
-        <img src="img_avatar2.png" alt="Avatar" class="avatar">
-    </div>
+    <input type="text" name="title" placeholder="title">
+    <input type="text" name="body" placeholder="body">
+    <input type="submit">
 
-    <div class="container">
-        <label for="uname"><b>Username</b></label>
-        <input type="text" placeholder="Enter Username" name="uname" required>
-
-        <label for="psw"><b>Password</b></label>
-        <input type="password" placeholder="Enter Password" name="psw" required>
-
-        <button type="submit">Login</button>
-        <label>
-            <input type="checkbox" checked="checked" name="remember"> Remember me
-        </label>
-    </div>
-
-    <div class="container" style="background-color:#f1f1f1">
-        <button type="button" class="cancelbtn">Cancel</button>
-        <span class="psw">Forgot <a href="#">password?</a></span>
-    </div>
 </form>
+
+<!--<form action="action_page.php" method="post">-->
+<!--    <div class="imgcontainer">-->
+<!--        <img src="img_avatar2.png" alt="Avatar" class="avatar">-->
+<!--    </div>-->
+
+<!--    <div class="container">-->
+<!--        <label for="uname"><b>Username</b></label>-->
+<!--        <input type="text" placeholder="Enter Username" name="uname" required>-->
+
+<!--        <label for="psw"><b>Password</b></label>-->
+<!--        <input type="password" placeholder="Enter Password" name="psw" required>-->
+
+<!--        <button type="submit">Login</button>-->
+<!--        <label>-->
+<!--            <input type="checkbox" checked="checked" name="remember"> Remember me-->
+<!--        </label>-->
+<!--    </div>-->
+
+<!--    <div class="container" style="background-color:#f1f1f1">-->
+<!--        <button type="button" class="cancelbtn">Cancel</button>-->
+<!--        <span class="psw">Forgot <a href="#">password?</a></span>-->
+<!--    </div>-->
+<!--</form>-->
 
 </body>
 </html>
